--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Betting Tips & Guides</title>
-    <link rel="stylesheet" href="idol.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -68,4 +68,5 @@
 <script src="main.js"></script>
 </body>
 </html>
+
 
